Add link to the issues page

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -57,6 +57,7 @@ div#what {
   <a href='/stats/'><img title='Statistics' src='/img/user.png' /></a>
   <a href='/graphs/'><img title='Charts' src='/img/chart.png' /></a>
   <a href='/source'><img title='Source code' src='/img/source.png' /></a>
+  <a href='/bugs'><img title='Report a bug' src='/img/bug.png' /></a>
   <a href='/credits'><img title='Credits' src='/img/help.png' /></a>
   <br />
   <div id="what" class="fertigo"></div>
