Add elwood, buluca

--- a/views/credits.tmpl
+++ b/views/credits.tmpl
@@ -31,39 +31,62 @@ img {
 <div align="center">
 <h1 class="fertigo">Statistiche OSM</h1>
 <h2>Credits</h2>
-<table cellpadding="10"> 
+<table cellpadding="10">
 <tr>
   <td>
-   <img src="/img/author-dapal.jpg"/> 
-  </td> 
-  <td> 
+   <img src="/img/author-dapal.jpg"/>
+  </td>
+  <td>
     <h3 class="fertigo"><a href="http://www.openstreetmap.org/user/David Paleino/">David Paleino</a></h3>
     <p><b>Main developer</b></p>
-  </td> 
+  </td>
 </tr>
 <tr>
   <td>
-   <img src="/img/author-vezzo.jpg"/> 
-  </td> 
-  <td> 
+   <img src="/img/author-vezzo.jpg"/>
+  </td>
+  <td>
     <h3 class="fertigo"><a href="http://www.openstreetmap.org/user/vezzo/">Francesco Vezzoli</a></h3>
     <p>
       <b>Beta-tester</b><br />
       <b>Donatore semi-volontario di CPU</b>
     </p>
-  </td> 
+  </td>
 </tr>
 <tr>
   <td>
-   <img src="/img/author-malgar.jpg"/> 
-  </td> 
-  <td> 
+   <img src="/img/author-malgar.jpg"/>
+  </td>
+  <td>
     <h3 class="fertigo"><a href="http://www.openstreetmap.org/user/alessioz/">Alessio Zanol</a></h3>
     <p>
       <b>Beta-tester</b><br />
       <b>Donatore semi-volontario di CPU</b>
     </p>
-  </td> 
+  </td>
+</tr>
+<tr>
+  <td>
+   <img src="/img/author-buluca.jpg"/>
+  </td>
+  <td>
+    <h3 class="fertigo"><a href="http://www.openstreetmap.org/user/Luca Brivio/">Luca Brivio</a></h3>
+    <p>
+      <b>Beta-tester</b><br />
+      <b>Supporto morale :)</b>
+    </p>
+  </td>
+</tr>
+<tr>
+  <td>
+   <img src="/img/author-elwood.jpg"/>
+  </td>
+  <td>
+    <h3 class="fertigo"><a href="http://www.openstreetmap.org/user/elwood/">Antonino Arcudi</a></h3>
+    <p>
+      <b>CSS per /stats/</b>
+    </p>
+  </td>
 </tr>
 </table>
 </div>
