Add attribution to OSM

--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -111,5 +111,6 @@
 ${showval(val, vals[val])}
 </py:for>
 </div>
+<p><small>Data &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.</small></p>
 </body>
 </html>
