--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -85,5 +85,6 @@ ${primitive('Nodi', nodes)}
 ${primitive('Ways', ways)}
 ${primitive('Relazioni', relations)}
 </div>
+<p><small>Data &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.</small></p>
 </body>
 </html>
