--- a/views/webgraph.tmpl
+++ b/views/webgraph.tmpl
@@ -93,6 +93,7 @@
     <input type="Submit" value="Graph!" />
   </form>
   <br />
+<p><small>Data &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.</small></p>
 </div>
   <div id="graph">
   </div>
