--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -66,7 +66,10 @@
       <td><img src="/img/stable.png" /></td>
     </py:when>
   </py:choose>
-  <td><a href="http://www.openstreetmap.org/user/${pair[0]}" style="text-decoration:none;">${pair[0]}</a></td>
+  <td>
+    <a href="http://www.openstreetmap.org/user/${pair[0]}" style="text-decoration:none;">${pair[0]}</a>
+    <a href="/user/${pair[0]}/?prefix=${prefix}"><img src='/img/profile.png' /></a>
+  </td>
   <td>${pair[1]}</td>
 </tr>
 </py:for>
