Improve the layout a bit

--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -79,7 +79,7 @@
 <tbody>
 <py:for each="count, pair in data">
 <tr>
-  <td>${count + 1}</td>
+  <td align="center">${count + 1}</td>
   <py:choose test="">
     <py:when test="pos[value][pair[0]] &lt; 0">
       <td><img src="/img/down.png" /> ${abs(pos[value][pair[0]])}</td>
@@ -95,7 +95,7 @@
     <a href="http://www.openstreetmap.org/user/${pair[0]}" style="text-decoration:none;">${pair[0]}</a>
     <a href="/user/${pair[0]}/?prefix=${prefix}"><img src='/img/profile.png' /></a>
   </td>
-  <td>${pair[1]}</td>
+  <td align="right">${pair[1]}</td>
 </tr>
 </py:for>
 <py:if test="split">
