Provide (and link) separate full-pages, closes #34

--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -101,7 +101,7 @@
 <py:if test="split">
 <tfoot>
   <tr>
-    <td colspan='4'><a href='/stats/${key}/?prefix=${prefix}&amp;full=yes'>&hellip;</a></td>
+    <td colspan='4'><a href='/stats/full/${key}/${category}?prefix=${prefix}'>&hellip;</a></td>
   </tr>
 </tfoot>
 </py:if>
