--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -76,7 +76,7 @@
 <py:if test="split">
 <tfoot>
   <tr>
-    <td colspan='4'><a href='/stats/?prefix=${prefix}&amp;full=yes'>&hellip;</a></td>
+    <td colspan='4'><a href='/stats/full/${name.lower()}?prefix=${prefix}'>&hellip;</a></td>
   </tr>
 </tfoot>
 </py:if>
