Make api fully REST-ful, closes #36

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -54,8 +54,8 @@ div#what {
   <h1 class="fertigo">Statistiche OSM ${date}</h1>
   <br />
   <br />
-  <a href='/stats/'><img title='Statistics' src='/img/user.png' /></a>
-  <a href='/graphs/'><img title='Charts' src='/img/chart.png' /></a>
+  <a href='/stats'><img title='Statistics' src='/img/user.png' /></a>
+  <a href='/graphs'><img title='Charts' src='/img/chart.png' /></a>
   <a href='/source'><img title='Source code' src='/img/source.png' /></a>
   <a href='/bugs'><img title='Report a bug' src='/img/bug.png' /></a>
   <a href='/credits'><img title='Credits' src='/img/help.png' /></a>
