--- a/views/workinprogress.tmpl
+++ b/views/workinprogress.tmpl
@@ -1,9 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
-      lang="it">
+      xmlns:i18n="http://genshi.edgewall.org/i18n"
+>
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
-<title>Statistiche OSM Italia</title>
+<title>OpenStreetMap Statistics</title>
 <style type="text/css">
 @font-face {
     font-family: 'Fertigo';
@@ -29,7 +30,7 @@ img {
 </head>
 <body>
 <div align="center">
-<h1 class="fertigo">Statistiche OSM</h1>
+<h1 class="fertigo">OpenStreetMap Statistics</h1>
 <img src='/img/workinprogress.png' />
 <h2>Work in progress</h2>
 <h3>${reason}</h3>
