Working l10n for on-the-fly rendered pages, refs #16

--- a/views/credits.tmpl
+++ b/views/credits.tmpl
@@ -4,7 +4,7 @@
 >
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
-<title i18n:msg="date">OpenStreetMap Statistics - ${date}</title>
+<title>OpenStreetMap Statistics</title>
 <style type="text/css">
 @font-face {
     font-family: 'Fertigo';
