Remove useless variable

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -4,7 +4,7 @@
 >
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
-<title i18n:msg="date">OpenStreetMap Statistics - ${date}</title>
+<title>OpenStreetMap Statistics</title>
 <style type="text/css">
 @font-face {
     font-family: 'Fertigo';
@@ -52,7 +52,7 @@ div#what {
 </head>
 <body>
 <div align="center">
-  <h1 class="fertigo" i18n:msg="date">OpenStreetMap Statistics - ${date}</h1>
+  <h1 class="fertigo">OpenStreetMap Statistics</h1>
   <br />
   <br />
   <a href='/stats'><img title='Statistics' src='/img/user.png' /></a>
