Adapt templates for translation links

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:i18n="http://genshi.edgewall.org/i18n"
+      xmlns:xi="http://www.w3.org/2001/XInclude"
 >
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
@@ -49,8 +50,10 @@ div#what {
     });
 //-->
 </script>
+<link rel="stylesheet" type="text/css" href="/style/osmstats_common.css" />
 </head>
 <body>
+<xi:include href='l10n.tmpl' />
 <div align="center">
   <h1 class="fertigo">OpenStreetMap Statistics</h1>
   <br />
