--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -39,8 +39,10 @@
 //-->
 </script>
 <link rel="stylesheet" type="text/css" href="/style/osmstats_style.css" />
+<link rel="stylesheet" type="text/css" href="/style/osmstats_common.css" />
 </head>
 <body>
+<xi:include href='l10n.tmpl' />
 <div align="center">
 <h1 i18n:msg="date">OpenStreetMap Statistics - ${date}</h1>
 <h2 i18n:msg="key">Key:${key}</h2>
