--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -25,8 +25,10 @@
 //-->
 </script>
 <link rel="stylesheet" type="text/css" href="/style/osmstats_style.css" />
+<link rel="stylesheet" type="text/css" href="/style/osmstats_common.css" />
 </head>
 <body>
+<xi:include href='l10n.tmpl' />
 <div align="center">
 <h1 i18n:msg="date">OpenStreetMap Statistics - ${date}</h1>
 <small><a href='/'>Go back</a></small>
