--- a/views/table.tmpl
+++ b/views/table.tmpl
@@ -8,8 +8,10 @@
 <title i18n:msg="date">OpenStreetMap Statistics - ${date}</title>
 <script src="/js/jquery.tablesorter.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/style/osmstats_style.css" />
+<link rel="stylesheet" type="text/css" href="/style/osmstats_common.css" />
 </head>
 <body>
+<xi:include href='l10n.tmpl' />
 <div align="center">
 <h1 i18n:msg="date">OpenStreetMap Statistics - ${date}</h1>
 <small><a href='javascript:history.go(-1);'>Go back</a></small>
