--- a/views/user.tmpl
+++ b/views/user.tmpl
@@ -20,8 +20,10 @@
 //-->
 </script>
 <link rel="stylesheet" type="text/css" href="/style/osmstats_style.css" />
+<link rel="stylesheet" type="text/css" href="/style/osmstats_common.css" />
 </head>
 <body>
+<xi:include href='l10n.tmpl' />
 <div align="center">
 <h1>OpenStreetMap Statistics</h1>
 <h2 i18n:msg="user">User profile: ${user}</h2>
