--- a/views/webgraph.tmpl
+++ b/views/webgraph.tmpl
@@ -1,12 +1,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:i18n="http://genshi.edgewall.org/i18n"
+      xmlns:xi="http://www.w3.org/2001/XInclude"
 >
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
 <title>OSM statistics graph generator</title>
 <script src="/js/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/style/osmstats_style.css" />
+<link rel="stylesheet" type="text/css" href="/style/osmstats_common.css" />
 <style>
     div#sidebar {
         width: 30%;
@@ -28,6 +30,7 @@
 </style>
 </head>
 <body>
+<xi:include href='l10n.tmpl' />
 <div id="content">
 <div id="sidebar">
   <h1>Dynamic graph generator</h1>
